# winnow

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
app/: __init__.py  cli.py  config.py  crypto.py  db.py  events.py  models.py  pipeline.py  runtime.py  security.py  service.py
app/ai/: base.py  minimax.py  prefilter.py
app/mail/: imap_client.py  smtp_forwarder.py
app/web/: api.py  main.py
deploy/: winnow-web.service  winnow.service
docs/: DEPLOY.md
scripts/: check_imap.py  check_minimax.py  check_smtp.py
tests/: test_events.py  test_forwarder.py  test_minimax_parse.py  test_prefilter.py  test_security.py
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  accountContext.js  api.js
web/src/components/: EmptyAccount.jsx  Layout.jsx
web/src/pages/: Binding.jsx  Dashboard.jsx  Login.jsx  Logs.jsx  Manage.jsx  Rules.jsx  Status.jsx
